HelloUltraviolet/Fixtures/RejectedSource/Permissions/ReceiverPermissionMismatch/Expected.uv
//! Expected diagnostic metadata for the ReceiverPermissionMismatch rejected-source specimen.

expectedDiagnostic("E-TYP-1605", "diagnostics.PermissionAdmissibility")
